cambios post locura

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <figure class="presentacion-img">
                 <img src="img/ROSA VIDAL (0).png" alt="mi foto">
             </figure>
-            <article class="presentacion">
+            <article class="presentacion-texto">
                 <h1>Hola, Soy Rosa Marielys</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis suscipit mollitia ad iure natus odit laboriosam corrupti veritatis possimus animi exercitationem, ratione quam ipsa atque fugit facere iusto fugiat labore similique! Eos cum labore tempore, corrupti in earum! In iure dignissimos, praesentium ipsam unde maiores nesciunt eveniet recusandae magni quisquam!</p>
                 <a href="#" class="btn">Descargar mi CV</a>
