--- a/index.html
+++ b/index.html
@@ -28,28 +28,54 @@
       </nav>
     </header>
 
-    <!-- La estructura básica y la vinculación con CSS estan listas. A codear! 💪  -->
-    <!-- En este archivo escriban su HTML -->
     <main>
         <section id="inicio">
             <figure class="presentacion-img">
                 <img src="img/ROSA VIDAL (0).png" alt="mi foto">
             </figure>
             <article class="presentacion-texto">
-                <h1>Hola, Soy Rosa Marielys</h1>
+                <h1>Hola, Soy Rosa</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis suscipit mollitia ad iure natus odit laboriosam corrupti veritatis possimus animi exercitationem, ratione quam ipsa atque fugit facere iusto fugiat labore similique! Eos cum labore tempore, corrupti in earum! In iure dignissimos, praesentium ipsam unde maiores nesciunt eveniet recusandae magni quisquam!</p>
-                <a href="#" class="btn">Descargar mi CV</a>
+                <a href="CV_Rosa Vidal Morales_2021.pdf" class="btn">Descargar mi CV</a>
+                </a>
             </article>
-
         </section>
 
         <section id="contacto">
+            <article class="contacto">
+                <h2>Hablemos</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis nobis, officia consequuntur architecto adipisci voluptas repellendus harum cupiditate odit vel pariatur natus quibusdam quis totam porro dolorem! Tenetur sint eos ullam magnam dolor error molestias ut impedit eligendi culpa ratione cupiditate temporibus veritatis dignissimos sapiente, sunt vitae repudiandae? Ex?</p>
+            </article>
+            <div id="contactame">
+                <figure class="email">
+                    <!--Enlace a gmail-->
+                    <a href="mailto:marielysvidal10@gmail.com">
+                        <img src="img/mail.png" alt="logo correo">
+                    </a>
+                </figure>
 
+                <figure class="github">
+                    <!--Enlace a github-->
+                    <a href="https://github.com/Marielysv/PROYECTI-1-EIDOS/blob/master/proyecto-1-cod-latam/">
+                        <img src="img/github.png" alt="mi github">
+                    </a>
+                </figure>
+
+                <figure class="linkedin">
+                    <!--No tengo cuenta linkedin-->
+                    <a href="https://cl.linkedin.com/">
+                        <img src="img/linkedin.png" alt="logo linkedin">
+                    </a>
+                </figure>
+            </div>
         </section>
     </main>
 
     <footer>
-
+        <a href="https://instagram.com/vidalmarielys?igshid=YmMyMTA2M2Y=">
+        <img id="logo" src="img/ROSA VIDAL.png" alt="">
+        </a>
+        <p> Rosa Vidal 99999999</p>
     </footer>
 
 </body>
