--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id="contactame">
                 <figure class="email">
                     <!--Enlace a gmail-->
-                    <a href="mailto:marielysvidal10@gmail.com">
+                    <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6">
                         <img src="img/mail.png" alt="logo correo">
                     </a>
                 </figure>
