--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <article class="presentacion-texto">
                 <h1>Hola, Soy Rosa</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis suscipit mollitia ad iure natus odit laboriosam corrupti veritatis possimus animi exercitationem, ratione quam ipsa atque fugit facere iusto fugiat labore similique! Eos cum labore tempore, corrupti in earum! In iure dignissimos, praesentium ipsam unde maiores nesciunt eveniet recusandae magni quisquam!</p>
-                <a href="CV_Rosa Vidal Morales_2021.pdf" class="btn">Descargar mi CV</a>
+                <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6" class="btn">Descargar mi CV</a>
             </article>
         </section>
 
@@ -47,7 +47,7 @@
             <div id="contactame">
                 <figure class="email">
                     <!--Enlace a gmail-->
-                    <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6">
+                    <a href="mailto:marielysvidal10@gmail.com">
                         <img src="img/mail.png" alt="logo correo">
                     </a>
                 </figure>
