--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </figure>
             <article class="presentacion-texto">
                 <h1>Hola, Soy Rosa</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis suscipit mollitia ad iure natus odit laboriosam corrupti veritatis possimus animi exercitationem, ratione quam ipsa atque fugit facere iusto fugiat labore similique! Eos cum labore tempore, corrupti in earum! In iure dignissimos, praesentium ipsam unde maiores nesciunt eveniet recusandae magni quisquam!</p>
+                <p>La vida es un proceso infinito de cambios y en la actualidad, las novedades avanzan sin parar a una velocidad indescriptible; si bien es cierto que los cambios han existido desde siempre, no podemos negar que en nuestro hoy debemos estar más atentos a estos procesos evolutivos, para no caer en la obsolescencia. Es por ello que decidí enfrentarme al reto de aprender una disciplina que, desde hace varias décadas está dirigiendo gran parte de nuestras vidas: el lenguaje de programación, un universo prácticamente infinito de posibilidades; un espacio para la creatividad, concentración y el desarrollo, donde sin duda estoy poniendo a prueba este mundo, que, aunque ya muy afianzado en nuestra sociedad, es completamente desconocido para mí.</p>
                 <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6" class="btn">Descargar mi CV</a>
             </article>
         </section>
@@ -42,7 +42,7 @@
         <section id="contacto">
             <article class="contacto">
                 <h2>Hablemos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus debitis nobis, officia consequuntur architecto adipisci voluptas repellendus harum cupiditate odit vel pariatur natus quibusdam quis totam porro dolorem! Tenetur sint eos ullam magnam dolor error molestias ut impedit eligendi culpa ratione cupiditate temporibus veritatis dignissimos sapiente, sunt vitae repudiandae? Ex?</p>
+                <p>A partir de ahora, los invito a acompañarme en esta aventura, en donde la tecnología y la imaginación harán resaltar los más versátiles y novedosos diseños, que serán la puerta de entrada de miles de millones de clientes y espectadores, a las diferentes organizaciones que de a poco, se irán sumando a este proyecto, que hace apenas unos meses, comenzó siendo solo una posibilidad, un sueño.</p>
             </article>
             <div id="contactame">
                 <figure class="email">
