--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rosa Vidal</title>
     
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -30,19 +29,22 @@
     <main>
         <section id="inicio">
             <figure class="presentacion-img">
-                <img src="img/ROSA VIDAL (0).png" alt="mi foto">
+                <img src="img/ROSA2.1.png" alt="mi foto">
             </figure>
             <article class="presentacion-texto">
                 <h1>Hola, Soy Rosa</h1>
-                <p>La vida es un proceso infinito de cambios y en la actualidad, las novedades avanzan sin parar a una velocidad indescriptible; si bien es cierto que los cambios han existido desde siempre, no podemos negar que en nuestro hoy debemos estar más atentos a estos procesos evolutivos, para no caer en la obsolescencia. Es por ello que decidí enfrentarme al reto de aprender una disciplina que, desde hace varias décadas está dirigiendo gran parte de nuestras vidas: el lenguaje de programación, un universo prácticamente infinito de posibilidades; un espacio para la creatividad, concentración y el desarrollo, donde sin duda estoy poniendo a prueba este mundo, que, aunque ya muy afianzado en nuestra sociedad, es completamente desconocido para mí.</p>
-                <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6" class="btn">Descargar mi CV</a>
+                <p>Venezolana, residenciada en Chile desde hace 6 años, Tecnóloga Agroindustrial y Licenciada en Contaduría Pública con Diplomado en Gerencia y Administración Tributaria, capacitación en Efectivad Relacional, Administración y Gestión del Tiempo, Manejo de Conflictos, Planificación y Obtención de Resultados, Resolución de Problemas y Toma de Decisiones, me encuentro finalizando mi primer curso en lenguaje de programación (HTML, CSS, JS y Git / Git Hub) y próxima a comenzar capacitación para obtener certificado GOOGLE de Análisis de Datos.  
+                    Cuento con casi 10 años de experiencia en el área administrativa al adquirir estas nuevas herramientas pretendo iniciarme en el ámbito laboral del área en un futuro cercano. 
+                    Poseo capacidad para trabajo en equipo y bajo presión, buen manejo de la relación con público y administración del tiempo.  
+                    </p>
+                <a href="https://drive.google.com/drive/folders/1985mou7XsrtRVnd65TDtIYHe5oYs2gs6" class="btn"> Descargar mi CV</a>
             </article>
         </section>
 
         <section id="contacto">
             <article class="contacto">
-                <h2>Hablemos</h2>
-                <p>A partir de ahora, los invito a acompañarme en esta aventura, en donde la tecnología y la imaginación harán resaltar los más versátiles y novedosos diseños, que serán la puerta de entrada de miles de millones de clientes y espectadores, a las diferentes organizaciones que de a poco, se irán sumando a este proyecto, que hace apenas unos meses, comenzó siendo solo una posibilidad, un sueño.</p>
+                <h2>Hablemos!</h2>
+                <p>La vida es un proceso infinito de cambios y en la actualidad, las novedades avanzan sin parar a una velocidad indescriptible; si bien es cierto que los cambios han existido desde siempre, no podemos negar que en nuestro hoy debemos estar más atentos a estos procesos evolutivos, para no caer en la obsolescencia. Es por ello que decidí enfrentarme al reto de aprender una disciplina que, desde hace varias décadas está dirigiendo gran parte de nuestras vidas: el lenguaje de programación, un universo prácticamente infinito de posibilidades; un espacio para la creatividad, concentración y el desarrollo, donde sin duda estoy poniendo a prueba este mundo, que, aunque ya muy afianzado en nuestra sociedad, hasta hace poco desconocido para mí.</p>
             </article>
             <div id="contactame">
                 <figure class="email">
@@ -73,8 +75,8 @@
         <a href="https://instagram.com/vidalmarielys?igshid=YmMyMTA2M2Y=">
         <img id="logo" src="img/ROSA VIDAL.png" alt="">
         </a>
-        <p> Rosa Vidal 99999999</p>
+        <p> Rosa Vidal </p>
     </footer>
-
+    <script src="main.js"></script>
 </body>
 </html>
