Actualizar index.html, main.js y styles.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img src="img/ROSA2.1.png" alt="mi foto">
             </figure>
             <article class="presentacion-texto">
-                <h1>Hola, Soy Rosa</h1>
+                <h1>Hola, Soy Rosa Vidal</h1>
                 <p>Venezolana, residenciada en Chile desde hace 6 años, Tecnóloga Agroindustrial y Licenciada en Contaduría Pública con Diplomado en Gerencia y Administración Tributaria, capacitación en Efectivad Relacional, Administración y Gestión del Tiempo, Manejo de Conflictos, Planificación y Obtención de Resultados, Resolución de Problemas y Toma de Decisiones, me encuentro finalizando mi primer curso en lenguaje de programación (HTML, CSS, JS y Git / Git Hub) y próxima a comenzar capacitación para obtener certificado GOOGLE de Análisis de Datos.  
                     Cuento con casi 10 años de experiencia en el área administrativa al adquirir estas nuevas herramientas pretendo iniciarme en el ámbito laboral del área en un futuro cercano. 
                     Poseo capacidad para trabajo en equipo y bajo presión, buen manejo de la relación con público y administración del tiempo.  
