Actualizar últimos cambios

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
     <header>
       <a href="https://instagram.com/vidalmarielys?igshid=YmMyMTA2M2Y=">
-         <img src="img/ROSA VIDAL.png" width="90" height="90" alt="logo personal">
+         <img src="img/ROSA VIDAL.png" width="85" height="85" alt="logo personal">
       </a>
       <nav>
            <ul id="menu">
                <li class="menu-item">
-                  <a href="inicio">Inicio</a>
+                  <a href="#inicio">Inicio</a>
                </li>
 
                <li class="menu-item">
-                <a href="contacto">Contacto</a>
+                <a href="#contactame">Contacto</a>
                </li>            
            </ul>
       </nav>
